# ratzek-services-http-backend

./: .gitignore  Cargo.toml  Makefile
doc/: admin-api.md  alerting-runbook.md  dhcp-migration-runbook.md  ratzek-site.rules  webcam-freshness-metric.sh
etc/: ala-archa-http-backend.example.yaml
scripts/: cross-aarch64.Dockerfile  deploy.sh
src/: alertmanager.rs  blacklist.rs  config.rs  device_metrics.rs  dhcp.rs  dhcp_hosts.rs  error.rs  history.rs  http.rs  ipset.rs  live_traffic.rs  main.rs  mobile_provider.rs  omapi.rs  persistent_state.rs  session.rs  speedtest.rs  state.rs  tc.rs  telegram.rs  unlimited_clients.rs
