[package]
authors = ["Evgenii Lepikhin <e.lepikhin@corp.mail.ru>"]
edition = "2021"
name = "ala-archa-http-backend"
version = "0.1.6"

[profile.release]
# Release compile-time optimizations
# https://github.com/johnthagen/min-sized-rust
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
slog = "2.7"
slog-envlogger = "2.2"
slog-scope = "4.4"
slog-syslog = { path = "custom-vendored/slog-syslog" }

actix-web = "4.3"
derive_more = "0.99"
surge-ping = "0.7"
tokio = "1.25"
dhcpd_parser = { git = "https://github.com/ala-archa/dhcpd-parser" }
prometheus_exporter_base = "1.4"
