[package]
authors = ["Evgenii Lepikhin <e.lepikhin@corp.mail.ru>"]
edition = "2021"
name = "ala-archa-http-backend"
version = "0.1.23"

[profile.release]
# Release compile-time optimizations
# https://github.com/johnthagen/min-sized-rust
lto = true
strip = true
opt-level = "z"
codegen-units = 1

# Faster-building deploy profile used by scripts/deploy.sh: trades a little binary
# size for much shorter build times (thin LTO + parallel codegen instead of fat
# LTO + a single codegen unit). Runtime behavior is unchanged.
[profile.deploy]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 16

[profile.fastdev]

inherits = "dev"
opt-level = 0
debug = false

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
slog = "2.7"
slog-envlogger = "2.2"
slog-scope = "4.4"
slog-syslog = { path = "custom-vendored/slog-syslog" }

actix-web = "4.3"
derive_more = "0.99"
surge-ping = "0.7"
tokio = { version = "1.25", features = ["process", "rt", "macros"] }
dhcpd_parser = { git = "https://github.com/ala-archa/dhcpd-parser", rev = "13c6fac0e69ce080e009396bfb7fa70882601d8e" }
prometheus_exporter_base = "1.4"
tokio-cron-scheduler = "0.13.0"
reqwest = { version = "0.12.9", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
humantime-serde = "1.1.1"
rand = "0.8"
argon2 = "0.5"
hex = "0.4"
ipnet = "2.9"
# `bundled` compiles SQLite from source (no system libsqlite3 needed; prod has gcc).
rusqlite = { version = "0.31", features = ["bundled"] }
